[project]
name = "validate-private"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["boto3>=1.34"]

[project.scripts]
validate-private = "validate_private.cli:main"
run-cypher = "validate_private.run_cypher:main"
admin-shell = "validate_private.admin_shell:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
